{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 29,
  "lineage": "54e538fe-7ca9-876d-9e07-141544272829",
  "resources": [
    {
      "module": "module.ELB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ELB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:211125418300:loadbalancer/app/voting-app-elb/1694f93bc659d383",
            "arn_suffix": "app/voting-app-elb/1694f93bc659d383",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "voting-app-elb-1897701662.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:211125418300:loadbalancer/app/voting-app-elb/1694f93bc659d383",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "voting-app-elb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-09ad836a9374a1891"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03fb0922da5c1f1d6"
              },
              {
                "subnet_id": "subnet-0c3446b2c64d1ba0c"
              }
            ],
            "subnets": [
              "subnet-03fb0922da5c1f1d6",
              "subnet-0c3446b2c64d1ba0c"
            ],
            "tags": {
              "Environment": "Sandbox"
            },
            "tags_all": {
              "Environment": "Sandbox"
            },
            "vpc_id": "vpc-045f13a8185b51b68",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.SG.aws_security_group.this",
            "module.subnets.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125418300:security-group/sg-09ad836a9374a1891",
            "description": "Security group for ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ad836a9374a1891",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ELB-SG",
            "name_prefix": "",
            "owner_id": "211125418300",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ELB-SG"
            },
            "tags_all": {
              "Name": "ELB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-045f13a8185b51b68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbf1535de7f9b749",
            "arn": "arn:aws:ec2:ap-south-1:211125418300:elastic-ip/eipalloc-0fbf1535de7f9b749",
            "association_id": "eipassoc-03a0638db336edcdc",
            "domain": "vpc",
            "id": "eipalloc-0fbf1535de7f9b749",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0513a8f1932e6ee11",
            "private_dns": "ip-192-168-1-30.ap-south-1.compute.internal",
            "private_ip": "192.168.1.30",
            "public_dns": "ec2-43-204-122-111.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.122.111",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125418300:internet-gateway/igw-0f442957201b69182",
            "id": "igw-0f442957201b69182",
            "owner_id": "211125418300",
            "region": "ap-south-1",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-045f13a8185b51b68"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbf1535de7f9b749",
            "association_id": "eipassoc-03a0638db336edcdc",
            "connectivity_type": "public",
            "id": "nat-0ccdd45f60a25d301",
            "network_interface_id": "eni-0513a8f1932e6ee11",
            "private_ip": "192.168.1.30",
            "public_ip": "43.204.122.111",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03fb0922da5c1f1d6",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.eip",
            "module.subnets.aws_internet_gateway.gw",
            "module.subnets.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125418300:route-table/rtb-0bfaf5e0bc3d012e2",
            "id": "rtb-0bfaf5e0bc3d012e2",
            "owner_id": "211125418300",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ccdd45f60a25d301",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-045f13a8185b51b68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.eip",
            "module.subnets.aws_internet_gateway.gw",
            "module.subnets.aws_nat_gateway.nat_gw",
            "module.subnets.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125418300:route-table/rtb-05190cbb2a0a8dc44",
            "id": "rtb-05190cbb2a0a8dc44",
            "owner_id": "211125418300",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f442957201b69182",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-045f13a8185b51b68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e9781e2010c233e",
            "region": "ap-south-1",
            "route_table_id": "rtb-0bfaf5e0bc3d012e2",
            "subnet_id": "subnet-081466cf7d66c8dfb"
          },
          "dependencies": [
            "module.subnets.aws_eip.eip",
            "module.subnets.aws_internet_gateway.gw",
            "module.subnets.aws_nat_gateway.nat_gw",
            "module.subnets.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_sub",
            "module.subnets.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f3e60e0c3e175f0",
            "region": "ap-south-1",
            "route_table_id": "rtb-0bfaf5e0bc3d012e2",
            "subnet_id": "subnet-042879d8c9bc72d91"
          },
          "dependencies": [
            "module.subnets.aws_eip.eip",
            "module.subnets.aws_internet_gateway.gw",
            "module.subnets.aws_nat_gateway.nat_gw",
            "module.subnets.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_sub",
            "module.subnets.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073ae1c490a60e579",
            "region": "ap-south-1",
            "route_table_id": "rtb-05190cbb2a0a8dc44",
            "subnet_id": "subnet-03fb0922da5c1f1d6"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.gw",
            "module.subnets.aws_route_table.public_rt",
            "module.subnets.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090360c6452429d28",
            "region": "ap-south-1",
            "route_table_id": "rtb-05190cbb2a0a8dc44",
            "subnet_id": "subnet-0c3446b2c64d1ba0c"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.gw",
            "module.subnets.aws_route_table.public_rt",
            "module.subnets.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125418300:subnet/subnet-081466cf7d66c8dfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081466cf7d66c8dfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125418300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private_subnet-0"
            },
            "tags_all": {
              "Name": "private_subnet-0"
            },
            "vpc_id": "vpc-045f13a8185b51b68"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125418300:subnet/subnet-042879d8c9bc72d91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042879d8c9bc72d91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125418300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private_subnet-1"
            },
            "tags_all": {
              "Name": "private_subnet-1"
            },
            "vpc_id": "vpc-045f13a8185b51b68"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125418300:subnet/subnet-03fb0922da5c1f1d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fb0922da5c1f1d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125418300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "pub_subnet-0"
            },
            "tags_all": {
              "Name": "pub_subnet-0"
            },
            "vpc_id": "vpc-045f13a8185b51b68"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125418300:subnet/subnet-0c3446b2c64d1ba0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3446b2c64d1ba0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125418300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "pub_subnet-1"
            },
            "tags_all": {
              "Name": "pub_subnet-1"
            },
            "vpc_id": "vpc-045f13a8185b51b68"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125418300:vpc/vpc-045f13a8185b51b68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-025e731a5f7255b59",
            "default_route_table_id": "rtb-0145df877cf91b9f5",
            "default_security_group_id": "sg-0edd94c708a4b3312",
            "dhcp_options_id": "dopt-02478e82a68c7f5c0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045f13a8185b51b68",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0145df877cf91b9f5",
            "owner_id": "211125418300",
            "region": "ap-south-1",
            "tags": {
              "Name": "voting-app-vpc"
            },
            "tags_all": {
              "Name": "voting-app-vpc"
            }
          }
        }
      ]
    }
  ]
}